49 col grid for the bibs

--- a/static/less/bootstrap/variables.less
+++ b/static/less/bootstrap/variables.less
@@ -192,11 +192,11 @@
 // GRID
 // --------------------------------------------------
 
-// Default 940px grid
+// 980px grid
 // -------------------------
-@gridColumns:             12;
-@gridColumnWidth:         60px;
-@gridGutterWidth:         20px;
+@gridColumns:             49;
+@gridColumnWidth:         20px;
+@gridGutterWidth:         0px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
 // Fluid grid
