--- a/templates/index.html
+++ b/templates/index.html
@@ -25,12 +25,24 @@
 	<body>
 
 		<div class="container">
-			<div class="row">
-				<div class="span1" style="background-color: #000;">0</div>
-				<div class="span12" style="background-color: #EEE;">0</div>
-				<div class="span12" style="background-color: #000;">0</div>
-				<div class="span12" style="background-color: #EEE;">0</div>	
-				<div class="span12" style="background-color: #000;">0</div>	
+			<div class="span1" style="background-color: #000;">0</div>
+			<div class="span12">0</div>
+			<div class="span36">
+				<div class="row">
+					<div class="span12 home"><span>hello there</span></div>
+					<div class="span12"><img src="/static/img/home/02.png"></div>
+					<div class="span12"><img src="/static/img/home/03.png"></div>
+				</div>
+				<div class="row">
+					<div class="span12"><img src="/static/img/home/04.png"></div>
+					<div class="span12"><img src="/static/img/home/05.png"></div>
+					<div class="span12"><img src="/static/img/home/06.png"></div>
+				</div>
+				<div class="row">
+					<div class="span12"><img src="/static/img/home/07.png"></div>
+					<div class="span12"><img src="/static/img/home/08.png"></div>
+					<div class="span12"><img src="/static/img/home/09.png"></div>
+				</div>
 			</div>
 		</div>
 
