pull from dropbox

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,19 +29,19 @@
 			<div class="span12">0</div>
 			<div class="span36">
 				<div class="row">
-					<div class="span12 home"><span>hello there</span></div>
-					<div class="span12"><img src="/static/img/home/02.png"></div>
-					<div class="span12"><img src="/static/img/home/03.png"></div>
+					<div class="span12 home" style="background-image:url('{{ images[0] }}');"><span>hello there</span></div>
+					<div class="span12 home" style="background-image:url('{{ images[1] }}');"><span>hello there</span></div>
+					<div class="span12 home" style="background-image:url('{{ images[2] }}');"><span>hello there</span></div>
 				</div>
 				<div class="row">
-					<div class="span12"><img src="/static/img/home/04.png"></div>
-					<div class="span12"><img src="/static/img/home/05.png"></div>
-					<div class="span12"><img src="/static/img/home/06.png"></div>
+					<div class="span12 home" style="background-image:url('{{ images[3] }}');"><span>hello there</span></div>
+					<div class="span12 home" style="background-image:url('{{ images[4] }}');"><span>hello there</span></div>
+					<div class="span12 home" style="background-image:url('{{ images[5] }}');"><span>hello there</span></div>
 				</div>
 				<div class="row">
-					<div class="span12"><img src="/static/img/home/07.png"></div>
-					<div class="span12"><img src="/static/img/home/08.png"></div>
-					<div class="span12"><img src="/static/img/home/09.png"></div>
+					<div class="span12 home" style="background-image:url('{{ images[6] }}');"><span>hello there</span></div>
+					<div class="span12 home" style="background-image:url('{{ images[7] }}');"><span>hello there</span></div>
+					<div class="span12 home" style="background-image:url('{{ images[8] }}');"><span>hello there</span></div>
 				</div>
 			</div>
 		</div>
