--- a/templates/index.html
+++ b/templates/index.html
@@ -29,19 +29,64 @@
 			<div class="span12">0</div>
 			<div class="span36">
 				<div class="row">
-					<div class="span12 home" style="background-image:url('{{ images[0] }}');"><span>hello there</span></div>
-					<div class="span12 home" style="background-image:url('{{ images[1] }}');"><span>hello there</span></div>
-					<div class="span12 home" style="background-image:url('{{ images[2] }}');"><span>hello there</span></div>
+					<div class="span12 preview" style="background-image:url('{{ images[0] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">01</span>
+							<span class="project">/03</span>
+						</span></span>
+					</div>
+					<div class="span12 preview" style="background-image:url('{{ images[1] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">01</span>
+							<span class="project">/05</span>
+						</span></span>
+					</div>
+					<div class="span12 preview" style="background-image:url('{{ images[2] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">01</span>
+							<span class="project">/02</span>
+						</span></span>
+					</div>
 				</div>
 				<div class="row">
-					<div class="span12 home" style="background-image:url('{{ images[3] }}');"><span>hello there</span></div>
-					<div class="span12 home" style="background-image:url('{{ images[4] }}');"><span>hello there</span></div>
-					<div class="span12 home" style="background-image:url('{{ images[5] }}');"><span>hello there</span></div>
+					<div class="span12 preview" style="background-image:url('{{ images[3] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">01</span>
+							<span class="project">/04</span>
+						</span></span>
+					</div>
+					<div class="span12 preview" style="background-image:url('{{ images[4] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">02</span>
+							<span class="project">/04</span>
+						</span></span>
+					</div>
+					<div class="span12 preview" style="background-image:url('{{ images[5] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">04</span>
+							<span class="project">/07</span>
+						</span></span>
+					</div>
 				</div>
 				<div class="row">
-					<div class="span12 home" style="background-image:url('{{ images[6] }}');"><span>hello there</span></div>
-					<div class="span12 home" style="background-image:url('{{ images[7] }}');"><span>hello there</span></div>
-					<div class="span12 home" style="background-image:url('{{ images[8] }}');"><span>hello there</span></div>
+					<div class="span12 preview" style="background-image:url('{{ images[6] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">03</span>
+							<span class="project">/02</span>
+						</span></span>
+					</div>
+					<div class="span12 preview" style="background-image:url('{{ images[7] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">01</span>
+							<span class="project">/01</span>
+						</span></span>
+					</div>
+					<div class="span12 preview" style="background-image:url('{{ images[8] }}');">
+						<span class="orange"><span class="text">
+							<span class="section">02</span>
+							<span class="project">/01</span>
+						</span></span>
+					</div>
 				</div>
 			</div>
 		</div>
