--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -1,5 +1,6 @@
 .preview {
 	height: 200px;
+	color: white;
 
 	& span.orange {
 		display: none;
@@ -10,8 +11,7 @@
 			height: 200px;
 		opacity: .95;
 	}
-
-	& span.text {
+	& span.number {
 		line-height: 108px;
 		margin-left: 30px;
 		& .section {
@@ -23,4 +23,14 @@
 			font-weight: 200;
 		}
 	}
+
+	& span.text {
+		margin-left: 30px;
+		font-size: 12px;
+		letter-spacing: 1px;
+		font-weight: 200;
+		font-style: italic;
+		line-height: 67px;
+	}
+
 }
