--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 
     <link href="/static/less/bootstrap/bootstrap.less" rel="stylesheet/less">
 		<link href="/static/less/bibiana.less" rel="stylesheet/less">
+		<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
 		<script src="/static/js/less.js" type="text/javascript"></script>
     <style>
       body {
@@ -25,8 +26,11 @@
 	<body>
 
 		<div class="container">
-			<div class="span1" style="background-color: #000;">0</div>
-			<div class="span12">0</div>
+			<div class="span1">&nbsp;</div>
+			<div class="span12"><div class="nav">
+				<div class="name">BIBIANA <br /> MONTERDE</div>
+				<div class="title">GRAPHIC <br /> DESIGNER</div>
+			</div></div>
 			<div class="span36">
 				<div class="row">
 					{{ dict(image=images[0], section=('01', 'WEB'), project=('03', 'MARKETO')) | preview }}
