forgot to remove comment

--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -5,9 +5,9 @@
 	color: white;
 
 	& span.orange {
-/*		display: none;
+		display: none;
 	}
-	&:hover span.orange { */
+	&:hover span.orange {
 		display: block;
 		background: #F58426;
 			height: 200px;
