--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Bibiana Monterde :: Design Portfolio">
     <meta name="author" content="Bibiana Monterde">
 
+		<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
     <link href="/static/less/bootstrap/bootstrap.less" rel="stylesheet/less">
 		<link href="/static/less/bibiana.less" rel="stylesheet/less">
-		<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
 		<script src="/static/js/less.js" type="text/javascript"></script>
     <style>
       body {
@@ -30,6 +30,9 @@
 			<div class="span12"><div class="nav">
 				<div class="name">BIBIANA <br /> MONTERDE</div>
 				<div class="title">GRAPHIC <br /> DESIGNER</div>
+				<div class="email">
+					<a href="mailto:%22Bibiana Monterde%22 &lt;bbmonterde@gmail.com&gt;">BBMONTERDE@GMAIL.COM</a>
+				</div>
 			</div></div>
 			<div class="span36">
 				<div class="row">
