add underline on hover to email

--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -83,6 +83,7 @@
 		position: absolute;
 		top: @pageHeight - @navMargin - 11px;
 		letter-spacing: 1px;
+		&:hover { text-decoration: underline; }
 	}
 }
 
