refactor html to split main area

--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -84,6 +84,7 @@
 		top: @pageHeight - @navMargin - 11px;
 		letter-spacing: 1px;
 		&:hover { text-decoration: underline; }
+		// TODO: try to use the same underline as the menu
 	}
 }
 
