--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Bibiana Monterde :: Design Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bibiana Monterde :: Design Portfolio">
-    <meta name="author" content="Bibiana Monterde">
+{% extends "bibiana.html" %}
 
-		<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
-		<link href="/static/less/bibiana.less" rel="stylesheet/less">
-		<script src="/static/js/less.js" type="text/javascript"></script>
-    <style>
-      body {
-        padding-top: 0px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-
-	<body>
-
-		<div class="container">
-			<div class="span1">&nbsp;</div>
-			<div class="span12"><div class="nav">
-				<div class="name">BIBIANA <br /> MONTERDE</div>
-				<div class="title">GRAPHIC <br /> DESIGNER</div>
-				<div class="email">
-					<a href="mailto:%22Bibiana Monterde%22 &lt;bbmonterde@gmail.com&gt;">BBMONTERDE@GMAIL.COM</a>
-				</div>
-			</div></div>
-			<div class="span36">
+{% block main %}
 				<div class="row">
 					{{ dict(image=images[0], section=('01', 'WEB'), project=('03', 'MARKETO')) | preview }}
 					{{ dict(image=images[1], section=('01', 'WEB'), project=('05', 'NUMENTA')) | preview }}
@@ -51,6 +18,4 @@
 				</div>
 			</div>
 		</div>
-
-	</body>
-</html>
+{% endblock %}
