remove confusion with title

--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -28,7 +28,7 @@
 			<div class="span1">&nbsp;</div>
 			<div class="span12"><div class="nav">
 				<div class="name">BIBIANA <br /> MONTERDE</div>
-				<div class="title">GRAPHIC <br /> DESIGNER</div>
+				<div class="job-title">GRAPHIC <br /> DESIGNER</div>
 				<div class="email">
 					<a href="mailto:%22Bibiana Monterde%22 &lt;bbmonterde@gmail.com&gt;">BBMONTERDE@GMAIL.COM</a>
 				</div>
