got the line under the section names

--- a/static/less/bootstrap/variables.less
+++ b/static/less/bootstrap/variables.less
@@ -46,7 +46,7 @@
 // Typography
 // -------------------------
 @sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
-@serifFontFamily:       Prata, Georgia, "Times New Roman", Times, serif;
+@serifFontFamily:       Georgia, "Times New Roman", Times, serif;
 @monoFontFamily:        Menlo, Monaco, Consolas, "Courier New", monospace;
 
 @baseFontSize:          13px;
