--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -6,6 +6,7 @@
 @pageHeight: 600px;
 @navMargin: 25px;
 @previewHeight: 200px;
+@serifFontFamily: Prata, Georgia, "Times New Roman", Times, serif;
 
 
 .preview {
@@ -21,7 +22,7 @@
 			height: @previewHeight;
 		opacity: .95;
 	}
-	& span.number {
+	& .number {
 		line-height: 108px;
 		margin-left: 30px;
 		& .section {
@@ -55,7 +56,7 @@
 	margin-top: @navMargin;
 	margin-left: @navMargin - 20px;
 
-	.name {
+	.bibiana {
 		font-family: @serifFontFamily;
 		font-size: 24px;
 		line-height: 28px;
@@ -74,6 +75,49 @@
 		letter-spacing: 2px
 	}
 
+	.menu {
+		position: absolute;
+		top: 176px;
+
+		& ol {
+			list-style: none;
+			margin: 0;
+			& ol {
+				margin-left: 28px;
+			}
+		}
+
+		& li {
+			line-height: 11px;
+			margin-bottom: 11px;
+		}
+
+		& .section {
+			& a {
+				color: black;
+				text-decoration: none;
+				border-bottom: 1px solid black;
+				padding-bottom: 2px;
+			}
+			& .number {
+				font-family: @serifFontFamily;
+				font-size: 10px;
+				letter-spacing: 1px;
+			}
+			& .slash {
+				font-family: @serifFontFamily;
+				font-size: 11px;
+			}
+			& .name {
+				font-size: 11px;
+				font-style: italic;
+				letter-spacing: 1px;
+				color: @grey;
+			}
+		}
+
+	}
+
 	.email a {
 		text-decoration: none;
 		color: @orange;
@@ -87,6 +131,3 @@
 		// TODO: try to use the same underline as the menu
 	}
 }
-
-
-
