--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -96,8 +96,10 @@
 			& a {
 				color: black;
 				text-decoration: none;
-				border-bottom: 1px solid black;
-				padding-bottom: 2px;
+				&:hover {
+					border-bottom: 1px solid black;
+					padding-bottom: 2px;
+				}
 			}
 			& .number {
 				font-family: @serifFontFamily;
