--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -96,7 +96,7 @@
 			& a {
 				color: black;
 				text-decoration: none;
-				&:hover {
+				&:hover, .selected{
 					border-bottom: 1px solid black;
 					padding-bottom: 2px;
 				}
