--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -23,8 +23,10 @@
 			<div class="span1">&nbsp;</div>
 			<div class="span12">
 				<div class="nav">
-					<div class="bibiana">BIBIANA <br> MONTERDE</div>
-					<div class="job-title">GRAPHIC <br> DESIGNER</div>
+					<a href="/">
+						<div class="bibiana">BIBIANA <br> MONTERDE</div>
+						<div class="job-title">GRAPHIC <br> DESIGNER</div>
+					</a>
 
 					<div class="menu">
 						{% block menu %}{% endblock %}
