--- a/templates/section.html
+++ b/templates/section.html
@@ -2,8 +2,8 @@
 
 {% block menu %}
 	<ol>
-	    <li class="section selected">
-			<a href="/web">
+	    <li class="section">
+			<a href="/web" class="selected">
 				<span class="number">01</span>
 				<span class="slash">/</span>
 				<span class="name">WEB</span>
