--- a/templates/section.html
+++ b/templates/section.html
@@ -2,29 +2,9 @@
 
 {% block menu %}
 	<ol>
-	    <li class="section">
-			<a href="/web" class="selected">
-				<span class="number">01</span>
-				<span class="slash">/</span>
-				<span class="name">WEB</span>
-			</a>
-		</li>
-
-	    <li class="section">
-			<a href="/print">
-				<span class="number">02</span>
-				<span class="slash">/</span>
-				<span class="name">PRINT</span>
-			</a>
-		</li>
-
-	    <li class="section">
-			<a href="/packaging">
-				<span class="number">03</span>
-				<span class="slash">/</span>
-				<span class="name">PACKAGING</span>
-			</a>
-		</li>
+		{% for number, name in sections %}
+			{{ dict(number=number, name=name) | menu_section }}
+		{% endfor %}
 	</ol>
 {% endblock %}
 
