--- a/templates/section.html
+++ b/templates/section.html
@@ -5,6 +5,32 @@
 		{% for number, name in sections %}
 			{{ dict(number=number, name=name) | menu_section }}
 		{% endfor %}
+			<ol>
+				<li class="project">
+					<a href="#">
+						<span class="number">01</span>
+						<span class="name">INMOBI</span>
+					</a>
+				</li>
+				<li class="project">
+					<a href="#">
+						<span class="number">01</span>
+						<span class="name">INMOBI</span>
+					</a>
+				</li>
+				<li class="project">
+					<a href="#">
+						<span class="number">01</span>
+						<span class="name">INMOBI</span>
+					</a>
+				</li>
+				<li class="project">
+					<a href="#">
+						<span class="number">01</span>
+						<span class="name">INMOBI</span>
+					</a>
+				</li>
+			</ol>
 	</ol>
 {% endblock %}
 
