--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -95,32 +95,42 @@
 			margin-bottom: 11px;
 		}
 
-		.section {
-			a {
-				color: black;
-				text-decoration: none;
-				&:hover, &.selected {
-					border-bottom: 1px solid black;
-					padding-bottom: 2px;
-				}
-			}
-			.number {
-				font-family: @serifFontFamily;
-				font-size: 10px;
-				letter-spacing: 1px;
-			}
-			.slash {
-				font-family: @serifFontFamily;
-				font-size: 11px;
-			}
-			.name {
-				font-size: 11px;
-				font-style: italic;
-				letter-spacing: 1px;
-				color: @grey;
+		a {
+			color: black;
+			text-decoration: none;
+			&:hover, &.selected {
+				border-bottom: 1px solid black;
+				padding-bottom: 2px;
 			}
 		}
-
+		.number {
+			font-family: @serifFontFamily;
+			font-size: 10px;
+			letter-spacing: 1px;
+		}
+		.slash {
+			font-family: @serifFontFamily;
+			font-size: 11px;
+		}
+		.name {
+			font-size: 11px;
+			font-style: italic;
+			letter-spacing: 1px;
+			color: @grey;
+		}
+		.project {
+			margin-bottom: 7px;
+			a:hover {
+				color: @orange;
+				border: 0;
+				.name { color: @orange; }
+			}
+			.number {
+				font-family: @sansFontFamily;
+				font-style: italic;
+				font-size: 11px;
+			}
+		}
 	}
 
 	.email a {
