auto linkify grid

--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -16,7 +16,7 @@
 	span.orange {
 		display: none;
 	}
-	&:hover span.orange {
+	&:hover span.orange.hover {
 		display: block;
 		background: @orange;
 			height: @previewHeight;
