fixed minor bug

--- a/templates/grid.html
+++ b/templates/grid.html
@@ -42,7 +42,7 @@
 		            </span>
 		        </span>
 		    </div>
-		{% if not project.get('url') %}</a>{% endif %}
+			{% if project.get('url') %}</a>{% endif %}
 	{% if loop.index in [3, 6] %}
 	</div>
 	<div class="row">
