minor styling fix

--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -9,6 +9,11 @@
 @serifFontFamily: Prata, Georgia, "Times New Roman", Times, serif;
 
 
+.row a {
+	text-decoration: none;
+}
+
+
 .preview {
 	height: @previewHeight;
 	color: white;
