--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Bibiana Monterde :: Design Portfolio</title>
+		<link rel="shortcut icon" href="data:image/x-icon;base64,R0lGODlhEAAQAKIAAPaXdfeig/vVyPWNZ/////FZIgAAAAAAACH5BAAAAAAALAAAAAAQABAAAAM0SLrcLaPIMoQjYOoSWthbpwggaBFRqQ2KCrauBsfSTCtpzBIkfRIfl2gRBA0ZkNXvwlQkAAA7" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Bibiana Monterde :: Design Portfolio">
 		<meta name="author" content="Bibiana Monterde">
