--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Bibiana Monterde :: Design Portfolio</title>
+		<title>Bibiana Monterde :: Graphic Designer</title>
 		<link rel="shortcut icon" href="data:image/x-icon;base64,R0lGODlhEAAQAKIAAPaXdfeig/vVyPWNZ/////FZIgAAAAAAACH5BAAAAAAALAAAAAAQABAAAAM0SLrcLaPIMoQjYOoSWthbpwggaBFRqQ2KCrauBsfSTCtpzBIkfRIfl2gRBA0ZkNXvwlQkAAA7" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Bibiana Monterde :: Design Portfolio">
+		<meta name="description" content="Bibiana Monterde :: Graphic Designer">
 		<meta name="author" content="Bibiana Monterde">
 
 		<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
