--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -9,8 +9,11 @@
 		<meta name="author" content="Bibiana Monterde">
 
 		<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
+		{# 
 		<link href="/static/less/bibiana.less" rel="stylesheet/less">
 		<script src="/static/js/less.js" type="text/javascript"></script>
+		#}
+		<link href="/static/css/bibiana.css" rel="stylesheet" type="stylesheet">
 
 		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
@@ -30,7 +33,30 @@
 					</a>
 
 					<div class="menu">
-						{% block menu %}{% endblock %}
+						{% block menu %}
+	<ol>
+		{% for (section_number, section_name), projects in tree|dictsort %}
+		    <li class="section">
+				<a href="/{{ section_number }}{{ section_name }}" class="{{ 'selected' if section_number + section_name == section }}">
+					<span class="number">{{ section_number }}</span>
+					<span class="slash">/</span>
+					<span class="name">{{ section_name|upper }}</span>
+				</a>
+				<ol>
+					{% for project_number, project_name in projects|sort if section_number + section_name == section %}
+						<li class="project">
+							<a href="/{{ section_number }}{{ section_name }}/{{ project_number }}{{ project_name }}">
+								<span class="number">{{ project_number }}</span>
+								<span class="name">{{ project_name|upper }}</span>
+							</a>
+						</li>
+					{% endfor %}
+				</ol>
+			</li>
+		{% endfor %}
+	</ol>
+
+						{% endblock %}
 					</div>
 
 					<div class="email">
