--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -13,7 +13,7 @@
 		<link href="/static/less/bibiana.less" rel="stylesheet/less">
 		<script src="/static/js/less.js" type="text/javascript"></script>
 		#}
-		<link href="/static/css/bibiana.css" rel="stylesheet" type="stylesheet">
+		<link href="/static/css/bibiana.css" rel="stylesheet" type="text/css">
 
 		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
