--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -9,11 +9,12 @@
 		<meta name="author" content="Bibiana Monterde">
 
 		<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
-		{# 
-		<link href="/static/less/bibiana.less" rel="stylesheet/less">
-		<script src="/static/js/less.js" type="text/javascript"></script>
-		#}
-		<link href="/static/css/bibiana.css" rel="stylesheet" type="text/css">
+		{% if config.DEBUG %}
+			<link href="/static/less/bibiana.less" rel="stylesheet/less">
+			<script src="/static/js/less.js" type="text/javascript"></script>
+		{% else %}
+			<link href="/static/css/bibiana.css" rel="stylesheet" type="text/css">
+		{% endif %}
 
 		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
@@ -68,6 +69,5 @@
 				{% block main %}{% endblock %}
 			</div>
 		</div>
-
 	</body>
 </html>
