--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,7 @@
 {% extends "grid.html" %}
 
-{% block menu %}{% endblock %}
+{% block menu %}
+	<form action="/login" method="POST">
+		<input id="password" name="password" type="password" autofocus="autofocus">
+	</form>
+{% endblock %}
