--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -24,7 +24,7 @@
 
 	<body>
 
-		<div class="container">
+		<div class="container {{ section }}">
 			<div class="span1">&nbsp;</div>
 			<div class="span12">
 				<div class="nav">
